# Agent-Design

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  example-transcript.md  prompt-contract.md
scripts/: run_real_agent.sh
src/evidence_agent/: __init__.py  __main__.py  app.py  context.py  executor.py  llm.py  loop.py  observability.py  planner.py  types.py
src/evidence_agent/state/: run_store.py
src/evidence_agent/static/: app.js  index.html  styles.css
src/evidence_agent/tools/: browser_tools.py  fs_tools.py  memory_tools.py  pdf_tools.py  registry.py
tests/: test_agent_eval_contracts.py  test_api_contracts.py  test_offline_contracts.py
